--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,5 @@ jobs:
         bin/rails assets:precompile
     - name: Linter
       run: bundle exec standardrb
+    - name: Tests
+      run: bundle exec rspec
