--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:11.5
+        image: postgres
         env:
           POSTGRES_USER: postgres
           POSTGRES_DB: postgres
@@ -38,7 +38,7 @@ jobs:
       with:
         bundler-cache: true
 
-    - name: Install PostgreSQL 11 client
+    - name: Install PostgreSQL client
       run: |
         sudo apt-get -yqq install libpq-dev
     - name: MaxMind Database
