--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres
+        image: postgres:14.1
         env:
           POSTGRES_USER: postgres
           POSTGRES_DB: postgres
