--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      PGHOST: localhost
+      PGHOST: postgres
       PGUSER: postgres
       RAILS_ENV: test
       HTTP_BASIC_AUTH_NAME: authname
