--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      PGHOST: postgres
+      PGHOST: localhost
       PGUSER: postgres
+      PGPASSWORD: postgres
       RAILS_ENV: test
       HTTP_BASIC_AUTH_NAME: authname
       HTTP_BASIC_AUTH_PASSWORD: authpassword
@@ -27,7 +28,9 @@ jobs:
       postgres:
         image: postgres:14.1
         env:
+          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
